[gd_scene load_steps=7 format=3 uid="uid://bf8bw4agvcrxp"]

[ext_resource type="Script" uid="uid://b4pmiw2gvbvyj" path="res://스테이지2/heater.gd" id="1_2yqpf"]
[ext_resource type="Texture2D" uid="uid://dhkma8wjhq68n" path="res://스테이지2/온열-Photoroom.png" id="2_qkkn4"]
[ext_resource type="Texture2D" uid="uid://dpes6b57ixr5p" path="res://스테이지2/온열(꺼짐)-Photoroom.png" id="3_r35o7"]
[ext_resource type="Script" uid="uid://cae7qpypped5s" path="res://스테이지2/RangeVisual.gd" id="4_qkkn4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_n0mw7"]
radius = 293.6818

[sub_resource type="CircleShape2D" id="CircleShape2D_0jo7i"]
radius = 3000.0

[node name="Heater" type="StaticBody2D" groups=["map_heaters"]]
scale = Vector2(0.2, 0.2)
script = ExtResource("1_2yqpf")
texture_on = ExtResource("2_qkkn4")
texture_off = ExtResource("3_r35o7")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_r35o7")

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_n0mw7")

[node name="WarmAura" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="WarmAura"]
shape = SubResource("CircleShape2D_0jo7i")

[node name="RangeVisual" type="Node2D" parent="WarmAura"]
script = ExtResource("4_qkkn4")

[connection signal="body_entered" from="WarmAura" to="." method="_on_warm_aura_body_entered"]
[connection signal="body_exited" from="WarmAura" to="." method="_on_warm_aura_body_exited"]
